arch1/main.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  
  tags = {
    Name = "arch1-vpc"
  }
}

resource "aws_internet_gateway" "this" { vpc_id = aws_vpc.vpc.id }

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = var.public_subnet_cidr

  map_public_ip_on_launch = true
  
  tags = {
    Name = "public-subnet"
    Tier = "public"
  }
}


resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = var.private_subnet_cidr
  
  tags = {
    Name = "private-subnet"
    Tier = "private"
  }
}


#Elastic IP
resource "aws_eip" "nat" { 
  domain = "vpc"
  
  tags = {
    Name        = "nat-eip"

  } 
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id
  depends_on    = [aws_internet_gateway.this]

  tags = {
    Name        = "nat-gateway"
  }

  lifecycle {
    prevent_destroy = false
  }
}


resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "public-route-table"
  }
}

resource "aws_route" "public_inet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public_assoc" {
  route_table_id = aws_route_table.public.id
  subnet_id      = aws_subnet.public.id
}



resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id
  
  tags = {
    Name        = "private-route-table"
  }
}


resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.this.id
}

resource "aws_route_table_association" "private_assoc" {
  route_table_id = aws_route_table.private.id
  subnet_id      = aws_subnet.private.id

}

# Security Group
resource "aws_security_group" "web" {
  name_prefix = "arch1-web"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# Simple EC2 Instance
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical (Ubuntu) official owner ID
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }
}

resource "aws_instance" "app" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.web.id]
  key_name               = var.key_name

  user_data = <<-EOF
                  #!/bin/bash
                  apt-get update -y
                  apt-get install -y apache2
                  echo "Arch1 Ubuntu instance up" > /var/www/html/index.html
                  systemctl enable apache2
                  systemctl start apache2
                  EOF

  tags = { Name = "arch1-app" }
}
